Fix padding issues on mobile

--- a/scss/plugin/discordinvite.scss
+++ b/scss/plugin/discordinvite.scss
@@ -26,7 +26,7 @@
 	
 		flex-wrap: wrap;
 
-		padding: 10px 20px;
+		padding: 20px;
 	
 		.guild-wrapper {
 			display: flex;
